Refactor the manual Pod and PVC deletion through annotation
Signed-off-by: Jakub Scholz <www@scholzj.com>